Design3/styles/nysl_3.css
/* Setting body margin and background image*/

body {
    margin: 0px;
    padding: 0px;
    background-image: url(../images/soccer2.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}
/* background image can be improved*/


/*Edit scrollbar properties */

::-webkit-scrollbar {
    width: 12px;
}

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 2, 0, 1);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 2, 0, 1);
}




/*Positioning and size*/

.title {
    text-align: center;
    font-size: 420%;
    font-family: monospace;
    border: 1px solid black;
    background-color: black;
    color: white;
    padding: 5px;
}




/*Removing bullet points next to list item and positiong to the left of text*/

.nav {
    list-style: none;
    position: absolute;
    top: 160px;
}





/*Removing underline and setting properties*/

.link {
    text-decoration: none;
    font-size: 20px;
    background-color: black;
    padding: 8px;
    border: 1px solid black;
    color: white;
    border-radius: 10px;
}





/*Spacing between links*/

.list {
    padding: 15px 0px 15px 10px;
}








/*Change link color when cursor hovers over*/

a:hover {
    color: darkgray;
}




/*Setting text properties*/

.index {
    font-size: 250%;
    text-align: center;
    font-family: monospace;
    padding: 5px;
}





/*Positioning logo*/

.logo {
    width: 120px;
    position: absolute;
    top: 20px;
    left: 20px;
}




/*Change email link color to white*/

.email {
    color: white;
}





/*Positioning and setting opacity and properties to all pages DIV content*/

.content {
    width: 65%;
    height: 600px;
    margin: 0 auto;
    border: 2px solid black;
    background: rgba(40, 5, 0, 0.7);
    font-size: 17px;
    text-align: center;
    color: white;
    font-family: monospace;
    overflow: scroll;
}

.contentInfo {
    width: 65%;
    height: 600px;
    margin: 0 auto;
    border: 2px solid black;
    background: rgba(40, 5, 0, 0.7);
    font-size: 17px;
    color: white;
    font-family: monospace;
    overflow: scroll;
}


.contentRegister {
    width: 65%;
    height: 600px;
    margin: 0 auto;
    border: 2px solid black;
    background: rgba(40, 5, 0, 0.7);
    font-size: 17px;
    color: white;
    font-family: monospace;
    overflow: scroll;
}


.contentRules {
    width: 1000px;
    height: 500px;
    /* usually not a fan of this positioning. will break your neck on mobile*/
    position: absolute;

}

/*Center and organize Rules content*/

#centerRules {
    text-align: justify;
    width: 90%;
    margin: 0 auto;
}


/* Modify list style and font size in gamerules page*/

#ruleScroll {
    overflow: scroll;
    font-size: 15px;
    text-decoration: none;
    list-style-position: inside
}


/*Center and organize Register content*/

#centerRegister {
    margin: 0 auto;
    width: 70%;
    padding: 15px;
    color: white;
}




/*Center and organize About content*/

#centerAbout {
    text-align: justify;
    width: 70%;
    margin: 0 auto;
}

#centerInfo {
    margin: 0 auto;
}


/* Poisition titles of game_info*/

.left {
    padding-left: 15px;
}





/*Seperate table rows*/

.tableH1 {
    padding: 0px 70px 20px 70px;
}





/*Seperate table rows*/

.contentInfo td {
    padding: 0px 70px 10px 70px;
}





/* Poisition title of game locations on game_info page*/

#location {
    padding-left: 15px;
}





/*Set underline to 'Permission to play'*/

.contentRegister h5 {
    text-decoration: underline;
}


/* Give spacing between jersey tables*/

.jersey {
    margin-left: 13.5px;
}

form td {
    padding-left: 50px;
}



/* Alighn textboxes in reg form */

.boxtable {
    display: table;
}

.boxtable p {
    display: table-row;
    font-size: 18px;
}

.boxtable label {
    display: table-cell;
}

.boxtable input {
    display: table-cell;
}



/*Position map*/

iframe {
    margin-top: 15px;
}


/*Modifiy textbox for aesthetic reasons*/

input {
    border: 0;
    outline: 0;
    background: rgba(255, 255, 255, 0.3);
    border-bottom: 1px solid white;
}



/*Align button to center and color*/

#submit {
    text-align: center;
}

#submit input {
    color: white;
    background-color: black;
}

#maps {
    margin-left: 22px;
}

